--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -19,7 +19,6 @@ PREREQUISITES
 -------------
 - Python 3.7 or higher
 - pip (Python package installer)
-- Microsoft Edge browser
 - Internet connection
 
 
@@ -28,15 +27,15 @@ STEP 1: Install Python Dependencies
 Open Command Prompt/PowerShell in AmazonScraper directory:
 
     pip install -r requirements.txt
+    python -m playwright install chromium
 
 Required packages:
-- flask==3.0.0
-- flask-cors==4.0.0
-- selenium==4.15.2
-- beautifulsoup4==4.12.2
-- webdriver-manager==4.0.1
-- fake-useragent==1.4.0
-- python-dotenv==1.0.0
+- beautifulsoup4
+- flask
+- playwright
+- prometheus-client
+- flasgger
+- gunicorn (for production)
 
 
 STEP 2: Configure Environment
@@ -54,26 +53,38 @@ Edit .env and set your API key:
     ALLOWED_ORIGINS=http://localhost:8000
     HEADLESS_MODE=False
 
+Install Playwright browser binaries:
+
+    python -m playwright install chromium
+
 
 STEP 3: Run API Server
 -----------------------
+For development:
     python api_server.py
+
+For production:
+    gunicorn --bind 0.0.0.0:5000 wsgi:app
 
 Server will start at: http://127.0.0.1:5000
 
 
-STEP 4: Test API
-----------------
-Using curl:
+================================================================================
+2. DOCKER DEPLOYMENT (RECOMMENDED)
+================================================================================
 
-    curl -X POST http://127.0.0.1:5000/api/scrape ^
-      -H "X-API-Key: your_secret_api_key_here" ^
-      -H "Content-Type: application/json" ^
-      -d "{\"product_url\": \"https://www.amazon.in/dp/B0FMDNZ61S\"}"
+This is the easiest way to run the API in production.
 
+STEP 1: Build and Run
+----------------------
+    docker-compose up -d --build
+
+The API will be available at http://localhost:5000.
+To stop:
+    docker-compose down
 
 ================================================================================
-2. VPS PRODUCTION DEPLOYMENT (ALWAYS RUNNING)
+3. VPS PRODUCTION DEPLOYMENT (MANUAL)
 ================================================================================
 
 PREREQUISITES
@@ -90,13 +101,6 @@ STEP 1: Install System Dependencies
 
     # Install Python and pip
     sudo apt install python3 python3-pip python3-venv -y
-
-    # Install Microsoft Edge
-    curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
-    sudo install -o root -g root -m 644 microsoft.gpg /etc/apt/trusted.gpg.d/
-    sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge.list'
-    sudo apt update
-    sudo apt install microsoft-edge-stable -y
 
     # Install nginx (reverse proxy)
     sudo apt install nginx -y
@@ -115,10 +119,14 @@ STEP 3: Deploy Application Files
     cd /home/amazonscraper/app
 
     # Upload these files (via FTP, SCP, or Git):
+    # - wsgi.py
     # - api_server.py
     # - api_config.py
     # - requirements.txt
-    # - scrapers/ (entire folder)
+    # - scrapers/
+    # - services/
+    # - utils/
+    # - deploy/
     # - .env.example
 
     # Create virtual environment
@@ -127,6 +135,7 @@ STEP 3: Deploy Application Files
 
     # Install dependencies
     pip install -r requirements.txt
+    python -m playwright install chromium
 
 
 STEP 4: Configure Production Environment
@@ -166,7 +175,7 @@ Paste this configuration:
     Group=amazonscraper
     WorkingDirectory=/home/amazonscraper/app
     Environment="PATH=/home/amazonscraper/app/venv/bin"
-    ExecStart=/home/amazonscraper/app/venv/bin/python api_server.py
+    ExecStart=/home/amazonscraper/app/venv/bin/gunicorn --bind 0.0.0.0:5000 --workers 3 --timeout 120 wsgi:app
     Restart=always
     RestartSec=10
     StandardOutput=append:/home/amazonscraper/app/logs/output.log
@@ -244,7 +253,7 @@ STEP 8: Configure Firewall
 
 
 ================================================================================
-3. CONFIGURATION
+4. CONFIGURATION
 ================================================================================
 
 SUPPORTED COUNTRIES (15 Amazon Marketplaces)
@@ -278,7 +287,7 @@ BROWSER_TIMEOUT - Browser operation timeout in seconds
 
 
 ================================================================================
-4. USAGE & API ENDPOINTS
+5. USAGE & API ENDPOINTS
 ================================================================================
 
 ENDPOINT 1: Health Check
@@ -300,7 +309,7 @@ Headers: X-API-Key: your_api_key_here
 
 Body:
 {
-  "product_url": "https://www.amazon.in/dp/ASIN"
+    "url": "https://www.amazon.in/dp/ASIN"
 }
 
 Response (12 fields):
@@ -337,7 +346,7 @@ if ($result['success']) {
 
 
 ================================================================================
-5. TROUBLESHOOTING
+6. TROUBLESHOOTING
 ================================================================================
 
 SERVICE MANAGEMENT COMMANDS
@@ -361,9 +370,10 @@ sudo systemctl start amazon-scraper-api
 COMMON ISSUES
 -------------
 
-Issue: WebDriver not found
+Issue: Playwright Browser Missing
 ---------------------------
-Solution: Webdriver-manager auto-downloads on first run. Ensure internet.
+Solution: Run the following command:
+    python -m playwright install chromium
 
 
 Issue: Browser crashes in headless mode
@@ -401,16 +411,11 @@ Solution: Increase timeout in nginx and .env
 PERFORMANCE OPTIMIZATION (HIGH TRAFFIC)
 ----------------------------------------
 
-1. Use Gunicorn (production-grade server):
-
-    pip install gunicorn
-    gunicorn -w 4 -b 0.0.0.0:5000 api_server:app
-
-Update systemd ExecStart line:
-    ExecStart=/home/amazonscraper/app/venv/bin/gunicorn -w 4 -b 0.0.0.0:5000 api_server:app
+1. Use Docker (recommended):
+    docker-compose up -d --scale amazon-scraper=3
 
 2. Enable browser pooling (reuse browser instances)
-3. Add Redis caching for frequently scraped products
+3. Add Redis caching (future update)
 
 
 LOG FILES
